fixed bottom white space

--- a/style.css
+++ b/style.css
@@ -77,11 +77,9 @@ li a:hover {
 
 }
   
-/*.parallax-5 {
-    background-image: url("images/bbq.jpg");
-    background-position: left top;
-
-}*/
+.parallax-5 {
+  max-height: 300px;
+}
 
     
 
